# vulkan-voxels

./: CMakeLists.txt  bitmap.h  heap_buffer.h  main.cpp  simple_vec.h  texels.h  voxel_volume.cpp  voxel_volume.hpp  vulkan_base.cpp  vulkan_base.hpp
shaders/: init_assignindex.comp  init_checkempty.comp  init_fillbricks.comp  trace.comp
